<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.6</version>
		<relativePath/>
	</parent>
	<groupId>com.finance</groupId>
	<artifactId>finance-portal</artifactId>
	<version>1.0.0</version>
	<name>Finance Portal</name>
	<description>Finance Portal - Multi Module</description>
	<packaging>pom</packaging>
	<properties>
		<java.version>21</java.version>
		<resilience4j.version>2.3.0</resilience4j.version>
		<mapstruct.version>1.6.3</mapstruct.version>
		<jacoco.version>0.8.13</jacoco.version>
		<byte-buddy.version>1.17.8</byte-buddy.version>
		<finance-common.version>1.0.0-SNAPSHOT</finance-common.version>
		<hibernate.version>7.3.4.Final</hibernate.version>
	</properties>

	<repositories>
		<repository>
			<id>github</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/umutozturk34/Toyota_32Bit_Finance_Portal</url>
		</repository>
	</repositories>

	<modules>
		<module>finance-monolith-shared</module>
		<module>finance-market</module>
		<module>finance-news</module>
		<module>finance-user</module>
		<module>finance-portfolio</module>
		<module>finance-app</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.github.resilience4j</groupId>
				<artifactId>resilience4j-bom</artifactId>
				<version>${resilience4j.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-logging</artifactId>
				<exclusions>
					<exclusion>
						<groupId>*</groupId>
						<artifactId>*</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>com.finance</groupId>
				<artifactId>finance-common</artifactId>
				<version>${finance-common.version}</version>
			</dependency>
			<dependency>
				<groupId>com.finance</groupId>
				<artifactId>finance-monolith-shared</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.finance</groupId>
				<artifactId>finance-market</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.finance</groupId>
				<artifactId>finance-user</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.finance</groupId>
				<artifactId>finance-news</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.finance</groupId>
				<artifactId>finance-portfolio</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.finance</groupId>
				<artifactId>finance-app</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>${mapstruct.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-layout-template-json</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.bytebuddy</groupId>
			<artifactId>byte-buddy-agent</artifactId>
			<version>${byte-buddy.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<configuration>
					<excludes>
						<exclude>**/dto/**</exclude>
						<exclude>**/config/**</exclude>
						<exclude>**/*MapperImpl.class</exclude>
						<exclude>**/*Application.class</exclude>
						<exclude>**/exception/**</exclude>
						<exclude>**/migration/**</exclude>
						<exclude>**/generated/**</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok-mapstruct-binding</artifactId>
							<version>0.2.0</version>
						</path>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>${mapstruct.version}</version>
						</path>
						<path>
							<groupId>org.springframework.boot</groupId>
							<artifactId>spring-boot-configuration-processor</artifactId>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>${argLine} -javaagent:${settings.localRepository}/net/bytebuddy/byte-buddy-agent/${byte-buddy.version}/byte-buddy-agent-${byte-buddy.version}.jar -XX:+EnableDynamicAgentLoading</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<source>21</source>
					<doclint>none</doclint>
					<quiet>true</quiet>
					<failOnError>false</failOnError>
					<encoding>UTF-8</encoding>
					<docencoding>UTF-8</docencoding>
					<charset>UTF-8</charset>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
